# understanding_the_iotivity_lite_codes

./: ChangeLog  README.md
src/: CMakeLists.txt
src/collection/: collection_client.c  collection_server.c
src/duff_device/: duff_device.c
src/idd/: device_builder_server.c  idd_client.c  idd_server.c
src/init/: init_client.c  init_server.c
src/oic_wk_con/: oic_wk_con_client.c  oic_wk_con_server.c
